<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spyfi</string>
    <string name="app_version">2.2.2</string>
    <string name="app_author">Nic Raboy</string>
    <string name="app_site">http://www.nraboy.com</string>
    <string name="app_support">http://www.nraboy.com/contact</string>
    <string name="app_twitter">https://www.twitter.com/nraboy</string>
    <string name="app_market">Google Play Edition</string>
    <string name="app_store_google">https://play.google.com/store/apps/details?id=com.nraboy.spyfi</string>
    <string name="app_store_amazon">http://www.amazon.com/Nic-Raboy-Spyfi/dp/B0097UHJDA</string>
    
    <string name="activity_camerainfo">Camera Info</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_stream">Streaming</string>
    
    <string name="hint_label">Label</string>
    <string name="hint_host">Host</string>
    <string name="hint_port">Port</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add">Add Camera</string>
    <string name="menu_settings">Settings</string>
    
    <string name="preference_preference">Preferences</string>
    <string name="preference_analytics">Analytics</string>
    <string name="preference_analytics_summary">Allow Spyfi to collect anonymous metric information</string>
    <string name="preference_about">About</string>
    <string name="preference_rate">Rate Spyfi</string>
    <string name="preference_support">Support</string>
    <string name="preference_contact">Contact Us</string>
    <string name="preference_contact_summary">Report a bug or send a suggestion</string>
    <string name="preference_getsocial">Get Social</string>
    <string name="preference_twitter">Follow us on Twitter</string>
    
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_rate_now">Rate Now</string>
    <string name="button_dont_remind">Never Show Again</string>
    <string name="button_ok">Ok</string>
    
    <string name="dialog_title_action">Perform An Action</string>
    <string name="dialog_title_please_rate">Rate Spyfi</string>
    <string name="dialog_title_communication_error">Communication Error</string>
    <string name="dialog_title_wifi_error">Wifi Error</string>
    
    <string name="dialog_message_version">Version</string>
    <string name="dialog_message_incomplete">Please make sure all fields are complete!</string>
    <string name="dialog_message_please_rate">Please support Spyfi by providing a rating or review of your experience.</string>
    <string name="dialog_message_stream_error">Camera failed to load. Please make sure all connection information is correct and the camera is set up correctly.</string>
    <string name="dialog_message_wifi_error">There is a problem with your internet or wireless connection.  Please check your connections and try again.</string>
</resources>