<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_height="0dip"
            android:layout_width="fill_parent"
            android:background="#FF909090"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <EditText
            android:id="@+id/title"
            android:hint="@string/hint_label"
            android:textSize="18sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">       
            <EditText
                android:id="@+id/host"
                android:hint="@string/hint_host"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" 
                android:layout_weight="3" 
                android:inputType="textNoSuggestions" />    
            <EditText
                android:id="@+id/port"
                android:hint="@string/hint_port"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" 
                android:layout_weight="1" 
                android:inputType="number" />            
        </LinearLayout>
        <EditText
            android:id="@+id/username"
            android:hint="@string/hint_username"
            android:textSize="18sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" 
            android:inputType="textNoSuggestions" />
        <EditText
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:textSize="18sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" />  
    </LinearLayout> 
</ScrollView>